// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`css prop react basic 1`] = `
.emotion-0 {
  color: red;
  font-size: 1px;
}

<p
  className="emotion-0"
>
  hello world
</p>
`;

exports[`css prop react kitchen sink 1`] = `
.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  font-size: 6;
  color: red;
}

.emotion-1 {
  color: blue;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-3 {
  color: red;
  border-radius: 5;
}

.emotion-3:hover {
  font-weight: bold;
  color: gray;
}

<div
  className="emotion-4 css__legacy-stuff"
>
  <h1
    className="emotion-0"
  >
    BOOM
  </h1>
  <p
    className="emotion-1 test_class1"
  >
    Hello
  </p>
  <p
    className="emotion-2 test_class1 test___class45"
  >
    World
  </p>
  <p
    className="emotion-3"
  >
    hello world
  </p>
</div>
`;

exports[`css prop react merging regular classes 1`] = `
.emotion-0 {
  display: block;
}

<div
  className="emotion-0 some-class"
/>
`;

exports[`css prop react objects 1`] = `
.emotion-0 {
  color: red;
  font-size: 1px;
}

<p
  className="emotion-0"
>
  hello world
</p>
`;

exports[`css prop react specificity with composition 1`] = `
.emotion-0 {
  display: block;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="emotion-0"
/>
`;

exports[`css prop react string expression 1`] = `
.emotion-0 {
  color: red;
  background: blue;
  font-size: 48px;
}

<p
  className="emotion-0"
>
  hello world
</p>
`;
